fix margin for last-child evo chain link style on tablet

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -491,7 +491,8 @@ footer{
 				margin-right: 80px;
 			}
 
-			&:nth-child(3n+1){
+			&:last-child{
+				margin: 0;
 			}
 
 			.evo-item::before{
